--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ta </title> <link rel="styleheet" href="style.css"
+    <title>agente P</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav>
-    <a href=""> Home</a>
-    <a href=""> Quem é perry</a>
-    <a href="">O que ele come?</a>
-    <a href=""> onde trabalha</a>
-    
-    </nav>
+        <a href=""> Home</a>
+        <a href=""> Quem é perry</a>
+        <a href="">O que ele come?</a>
+        <a href=""> onde trabalha</a>
 
+    </nav>
+    <header></header>
+
+    <div>
+        <p>
+            Ele é um mamífero aquático e também bota ovos
+            Peludo, pé de pato, que nunca foge da raiáiáiá
+            Ele enfrenta todo perigo
+            Com sua cauda de castor e seu bico
+            E as mulheres suspiram toda vez que ele diz: Grow
+            Ele é o Perry... Perry o ornitorrinco
+
+        </p>
+        <img src="https://i.pinimg.com/236x/03/84/cc/0384ccbd7a6d78598134dcf686920a32.jpg" alt="">
+
+    </div>
+    <footer> </footer>
 
 </body>
+
 </html>
